--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.9"
 fastapi = "^0.119.1"
 uvicorn = "^0.38.0"
 pydantic-settings = "^2.11.0"
+tortoise-orm = "^0.25.1"
+aerich = "^0.9.2"
 
 
 [build-system]
