feat : db테이블 생성 스키마, aerich 연동

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_USER=choi
 DB_PASSWORD=dain8154
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=diary
+DB_NAME=quotediary
 DB_SCHEME=asyncpg 
 
 SECRET_KEY="mysecret"
