--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,20 @@ uvicorn = "^0.38.0"
 pydantic-settings = "^2.11.0"
 tortoise-orm = "^0.25.1"
 aerich = "^0.9.2"
+asyncpg = "^0.30.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+
+[tool.aerich]
+
+tortoise_orm = "app.db.migrations.TORTOISE_ORM"
+
+location = "./migrations"
+
+src_folder = "./."
 
