build: DB URL을 로컬 -> 원격 서버로 변경

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_USER=choi
-DB_PASSWORD=dain8154
-DB_HOST=localhost
+DB_USER=qoutediary_admin
+DB_PASSWORD=1234qwer
+DB_HOST=119.197.89.199
 DB_PORT=5432
-DB_NAME=quotediary
-DB_SCHEME=asyncpg 
+DB_NAME=qoutediary
+DB_SCHEME=asyncpg
 
 SECRET_KEY="mysecret"
 ALGORITHM="HS256"
