chore : 오타 수정 및 코드 수정

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-DATABASE_URL=postgres://postgres:1234@localhost:5432/fastapi_db
-SECRET_KEY=supersecretkey
+DB_USER=todolist_admin
+DB_PASSWORD=1234qwer
+DB_HOST=119.197.89.199
+DB_PORT=5432
+DB_NAME=todolist
+DB_SCHEME=asyncpg
+
+SECRET_KEY="mysecret"
+ALGORITHM="HS256"
