--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ asyncpg = "^0.30.0"
 requests = "^2.32.5"
 beautifulsoup4 = "^4.14.2"
 selenium = "^4.38.0"
+jinja2 = "^3.1.6"
 
 
 [tool.poetry.group.dev.dependencies]
