--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ selenium = "^4.38.0"
 jinja2 = "^3.1.6"
 lxml = "^6.0.2"
 python-jose = "^3.5.0"
+passlib = "^1.7.4"
+bcrypt = "^3.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
