--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ lxml = "^6.0.2"
 python-jose = "^3.5.0"
 passlib = "^1.7.4"
 bcrypt = "^3.2.2"
+email-validator = "^2.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
